Replaced UIPopup with buttons due to its instability and initialization of the variables.

--- a/align_text.form
+++ b/align_text.form
@@ -4,26 +4,10 @@
 FILE_TYPE=FORM_DEFN VERSION=2
 FORM AUTOGREYTEXT 
 FIXED
-PORT 44 14
+PORT 20 5
 HEADER "Form Field Type Demo"
 
 TILE
-
-FIELD buttonEqualSpace
-FLOC 20 3
-MENUBUTTON "Equal Space" 14 3
-ENDFIELD
-
-TEXT "space :"
-FLOC 20 6
-ENDTEXT
-
-FIELD spaceText
-FLOC 28 6
-INTSLIDEBAR 2 2
-MIN 0
-MAX 500
-ENDFIELD
 
 GROUP "Align Directions"
 FLOC 2 2
@@ -40,28 +24,13 @@ FLOC 4 6
 CHECKLIST "Horizontal" "rg"
 ENDFIELD
 
-FIELD buttonMoveUp
-FLOC 25 10
-MENUBUTTON "Up" 4 3
+FIELD buttonNext
+FLOC 2 8
+MENUBUTTON "next" 10 3
 ENDFIELD
 
-FIELD buttonMoveDown
-FLOC 25 16
-MENUBUTTON "Down" 4 3
-ENDFIELD
-
-FIELD buttonMoveLeft
-FLOC 20 13
-MENUBUTTON "Left" 4 3
-ENDFIELD
-
-FIELD buttonMoveRight
-FLOC 30 13
-MENUBUTTON "Right" 4 3
-ENDFIELD
-
-FIELD done
-FLOC 2 29
+FIELD buttonDone
+FLOC 2 10
 MENUBUTTON "Ok" 10 3
 ENDFIELD
 
